--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 		<main>
 		</main>
 	</body>
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script>
-
+	$(document).ready(function(){
+		$('form').on('submit', function(event){
+			event.preventDefault();
+			var url = "https://api.github.com/users/" + $('#search').val() + '?access_token=e36c94d9874f7626262f92f36c9b78b35e8b50de'; 
+			$.get(url, function(user){
+				$('<article><ul><li>' + '<img src="' + user.avatar_url + '"></li><li>Repos: ' + user.public_repos + '</li><li>Name: ' + user.name + '</li><li>Location: ' + user.location + '</li><li>Email: ' + user.email + '</li></ul></article>').appendTo('main');
+			});
+		});
+	})
 	</script>
-	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 </html>
